[gd_scene load_steps=7 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://BackEnvironment.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://HPBar.gd" type="Script" id=6]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="BackEnvironment" parent="." instance=ExtResource( 2 )]

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Level" parent="Game" instance=ExtResource( 1 )]

[node name="Room" type="Node2D" parent="Game"]

[node name="Player" parent="Game" instance=ExtResource( 3 )]
position = Vector2( 491.967, 326.87 )

[node name="Particles" type="Node2D" parent="Game"]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 42.0
margin_top = 24.0
margin_right = -42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
margin_right = 940.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="ProgressBar" parent="UI/MarginContainer/VBoxContainer"]
margin_right = 940.0
margin_bottom = 14.0
max_value = 2000.0
script = ExtResource( 6 )

[node name="GameOver" type="Label" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4600.0
margin_top = -2664.0
margin_right = -4600.0
margin_bottom = -2664.0
rect_scale = Vector2( 10, 10 )
text = "GAME OVER"
align = 1
valign = 1

[node name="GameCompleted" type="Label" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3048.0
margin_top = -1776.0
margin_right = -3048.0
margin_bottom = -1776.0
rect_scale = Vector2( 7, 7 )
text = "GAME COMPLETED!!"
align = 1
valign = 1
